fix: added z-index to mobile navbar, added flex-wrap and mb-2 to /about page tabs

--- a/app/globals.css
+++ b/app/globals.css
@@ -49,7 +49,7 @@ body {
   }
 
   .tab-link {
-    @apply p-2 text-center font-bold rounded-lg border border-white
+    @apply mb-2 p-2 text-center font-bold rounded-lg border border-white
         hover:bg-slate-500 hover:bg-opacity-50
          active:text-slate-800;
   }
